--- a/task_14_6/task_1.html
+++ b/task_14_6/task_1.html
@@ -6,6 +6,10 @@
     <title>Task 1</title>
 </head>
 <body>
-    <h1>Task 1 Done</h1>
+    <h1>MutazWasfi</h1>
+    <img src="img1.jpg" alt="this is my image">
+<br>
+    <a href="https://www.linkedin.com/in/mu-taz-w-abo-yaqoup-b3427a142/">
+        Visit My Linkedin Page!</a>
 </body>
 </html>
