--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>task 14-6</title>
+    <title>Mutaz Wasfi</title>
 </head>
 <body>
     <h2>task 14-6</h2>
 
-    <a href="./task_14_6/task_1.html">tank1</a>
-    <a href="./task_14_6/task_2.html">tank</a>
+    <a href="./task_14_6/task_1.html">tank 1</a>
+    <a href="./task_14_6/task_2.html">task 2</a>
 </body>
 </html>
