--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h2>task 14-6</h2>
 
-    <a href="./task_14_6/task_1.html">tank 1</a>
+    <a href="./task_14_6/task_1.html">task 1</a>
     <a href="./task_14_6/task_2.html">task 2</a>
 </body>
 </html>
