Tasks Done For Today

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
 
     <a href="./task_14_6/task_1.html">task 1</a>
     <a href="./task_14_6/task_2.html">task 2</a>
+    <a href="./task_14_6/Task_3.html">task 3</a>
+
 </body>
 </html>
