Tasks Done For Today

--- a/task_14_6/task_2.html
+++ b/task_14_6/task_2.html
@@ -6,6 +6,9 @@
     <title>Task 2</title>
 </head>
 <body>
+    <h1 style="text-align: center;"> Headings Task 1</h1>
+    <hr>
+    
     <h1>heading #1</h1>
     <h2>heading #1</h2>
     <h3>heading #1</h3>
