--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <a href="./task_14_6/task_1.html">task 1</a>
     <a href="./task_14_6/task_2.html">task 2</a>
     <a href="./task_14_6/Task_3.html">task 3</a>
+    <a href="./task_14_6/Task_4.html">task 4</a>
+    <a href="./task_14_6/Task_5.html">task 5</a>
 
 </body>
 </html>
