--- a/task_14_6/Task_3.html
+++ b/task_14_6/Task_3.html
@@ -6,8 +6,11 @@
     <title>Task 3</title>
 </head>
 <body>
+    <h1 style="text-align: center;"> Paragraph Task 2</h1>
+    <hr>
+
     <h1>The First Heading</h1>
     <hr>
-    <p>Hi, I am a paragraph. Or am I</p>
+    <p>Hi, I am a paragraph. Or am <strong>I</strong>?</p>
 </body>
 </html>
