Tasks Almost Done For Day 2

--- a/index.html
+++ b/index.html
@@ -8,11 +8,20 @@
 <body>
     <h2>task 14-6</h2>
 
-    <a href="./task_14_6/task_1.html">task 1</a>
-    <a href="./task_14_6/task_2.html">task 2</a>
-    <a href="./task_14_6/Task_3.html">task 3</a>
-    <a href="./task_14_6/Task_4.html">task 4</a>
-    <a href="./task_14_6/Task_5.html">task 5</a>
+    <a href="./task_14_6/task_1.html" target="_blank">task 1</a>
+    <a href="./task_14_6/task_2.html" target="_blank">task 2</a>
+    <a href="./task_14_6/Task_3.html" target="_blank">task 3</a>
+    <a href="./task_14_6/Task_4.html" target="_blank">task 4</a>
+    <a href="./task_14_6/Task_5.html" target="_blank">task 5</a>
+
+    <h2>task 15-6</h2>
+
+    <a href="./task_15_6/task_1.html" target="_blank">task 1</a>
+    <a href="./task_15_6/Task_2.html" target="_blank">task 2</a>
+    <a href="./task_15_6/Task_3.html" target="_blank">task 3</a>
+    <a href="./task_15_6/Task_4.html" target="_blank">task 4</a>
+    <a href="./task_15_6/Task_5.html" target="_blank">task 5</a>
+    <a href="./task_16_6/Task_6.html" target="_blank">task 6</a>
 
 </body>
 </html>
