--- a/task_14_6/task_1.html
+++ b/task_14_6/task_1.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>MutazWasfi</h1>
-    <img src="img1.jpg" alt="this is my image">
+    <img src="../Resources/img1.jpg" alt="this is my image">
 <br>
     <a href="https://www.linkedin.com/in/mu-taz-w-abo-yaqoup-b3427a142/">
         Visit My Linkedin Page!</a>
