Tasks Done For Day 2

--- a/task_15_6/Task_6.html
+++ b/task_15_6/Task_6.html
@@ -6,6 +6,56 @@
     <title>Task 6</title>
 </head>
 <body>
+
+    <h1>Employee Interests Survey form</h1>
+
+<br>
+
+    <label for="name">Enter your name:</label><input type="text" name="name" id="name">
+
+<br>
+<br>
+
+    <label for="department">Enter your department</label> <input type="text" name="department" id="department">
     
+<br>
+<br>
+
+    <label for="info">Tell us a little about yourself</label>
+    <textarea name="info" id="info" cols="30" rows="10"></textarea>
+
+<br>
+<br>
+
+    Do you exercise at home?
+    <input type="radio" name="exercise" id="exercise"><label for="Yes">Yes</label>
+    <input type="radio" name="exercise" id="exercise"><label for="No">No</label>
+<br>
+<br>
+    How do you like to read about your favorite topics?
+<br>
+<br>
+    <form>
+    <input type="checkbox" name="favorite topics" id="favorite topics"><label for="Books">Books</label>
+    <input type="checkbox" name="favorite topics" id="favorite topics"><label for="Online resources">Online resources</label>
+    <input type="checkbox" name="favorite topics" id="favorite topics"><label for="Phone Apps">Phone Apps</label>
+    <input type="checkbox" name="favorite topics" id="favorite topics"><label for="Magazines">Magazines</label>
+    </form>
+<br>
+<br>
+
+ What genere of movies do you like? 
+ <select name="movies" id="movies">
+    <option value="comedy">comedy</option>
+    <option value="action">action</option>
+    <option value="horror">horror</option>
+</select>
+
+<br>
+<br>
+
+<input type="submit" value="sumbit">
+
 </body>
+
 </html>
