--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <h2>task 15-6</h2>
 
-    <a href="./task_15_6/task_1.html" target="_blank">task 1</a>
+    <a href="./task_15_6/Task_1.html" target="_blank">task 1</a>
     <a href="./task_15_6/Task_2.html" target="_blank">task 2</a>
     <a href="./task_15_6/Task_3.html" target="_blank">task 3</a>
     <a href="./task_15_6/Task_4.html" target="_blank">task 4</a>
