--- a/task_15_6/Task_2.html
+++ b/task_15_6/Task_2.html
@@ -33,7 +33,7 @@
         <tfoot>
 
             <tr>
-                <td colspan="3">00</td>
+                <td colspan="3">‎</td>
             </tr>
 
 
