Tasks Done For Day 3

--- a/task_18_6/Task_2.html
+++ b/task_18_6/Task_2.html
@@ -11,9 +11,9 @@
     <h1>Hello Market !</h1>
     <hr>
     <p class="task2">
-        Laptop <del>500</del> 300 €
+        Laptop <b><del>500</del> 300 €</b>
 <br>
-        ps4 <del>800</del> 700 €
+        ps4 <b><del>800</del> 700 €</b>
 
     </p>
     
