--- a/task_18_6/Task_5.html
+++ b/task_18_6/Task_5.html
@@ -6,6 +6,46 @@
     <title>Task 5</title>
 </head>
 <body>
-    
+    <table>
+        <tr>
+            <td><label for="name">Name: </label></td>
+            <td><input type="text" name="Name" id="Name"></td>
+        </tr>
+
+        <tr>
+            <td><label for="Address">Address: </label></td>
+            <td><input type="text" name="Address" id="Address"></td>
+        </tr>
+
+        <tr>
+            <td><label for="City">City: </label></td>
+            <td><input type="text" name="City" id="City"></td>
+        </tr>
+
+        <tr>
+            <td><label for="state">State: </label></td>
+            <td><input type="text" name="state" id="state" maxlength="11" size="11"></td>
+        </tr>
+
+        <tr>
+            <td><label for="Zip">Zip: </label></td>
+            <td><input type="text" name="Zip" id="Zip" maxlength="11" size="11"></td>
+        </tr>
+
+        <tr>
+            <td><label for="Magazine">Magazine: </label></td>
+            <td><select>
+                <option value="newsweek">newsweek</option>
+                <option value="newsday">newsday</option>
+            </select></td>
+        </tr>
+
+        <tr>
+            <td><label for="subscription">Subscription: </label></td>
+            <td><input type="radio">1 year <input type="radio">2 year</td>
+        </tr>
+    </table>
+    <input type="button" value="Send Your Order">
+
 </body>
 </html>
