--- a/index.html
+++ b/index.html
@@ -24,5 +24,13 @@
     <a href="./task_15_6/Task_6.html" target="_blank">task 6</a>
     <a href="./task_15_6/Task_7.html" target="_blank">task 7</a>
 
+    <h2>task 18-6</h2>
+
+    <a href="./task_18_6/Task_1.html" target="_blank">task 1</a>
+    <a href="./task_18_6/Task_2.html" target="_blank">task 2</a>
+    <a href="./task_18_6/Task_3.html" target="_blank">task 3</a>
+    <a href="./task_18_6/Task_4.html" target="_blank">task 4</a>
+    <a href="./task_18_6/Task_5.html" target="_blank">task 5</a>
+
 </body>
 </html>
