--- a/task_18_6/Task_3.html
+++ b/task_18_6/Task_3.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../Style.css" />
   </head>
   <body>
-      <h4>Tabes With Links !</h4>
+      <h4>Tables With Links !</h4>
       <table>
         <thead>
           <th>Number</th>
@@ -31,7 +31,7 @@
         </tr>
         <tr>
           <td>#4</td>
-          <td>tables</td>
+          <td>Tables</td>
           <td><a href="#">Tables Folder</a></td>
         </tr>
       </table>
