--- a/task_18_6/Task_4.html
+++ b/task_18_6/Task_4.html
@@ -1,35 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 4</title>
-    <link rel="stylesheet" href="ForthStyle.css">
-</head>
-<body>
-    <div class="all">
-        <h1>Meet Jack</h1>
-    <div class="volvo">
-        <img src="jack.gif" alt="pic of a stupid kid (look a like of yazen)">
-    </div>
-    <span>This is Jack. He's an odd little boy that just got an
-        empty box for his birthday. He may look happy, but
-        he's a little disappointed. Now he'll have to put a few
-        things in the box.
-    </span><br><br>
+    <link rel="stylesheet" href="../Style.css">  </head>
+  <body>
+    <section id="page">
+      <article class="center">
+        <h1><i>Meet Jack</i></h1>
+        <img src="../Resources/jack.gif" alt="jack" />
+      </article>
+
+      <article>
+        This is Jack. He's an odd little boy that just got an empty box for his
+        birthday. He may <i>look</i> happy, but he's a
+        <i>little</i> disappointed. Now he'll have to put a few things in the
+        box.
+      </article>
+
+      <br />
+      <article>
         Jack would really like...
         <ul>
-            <li>Roller blades</li>
-            <li>Magic tricks</li>
-            <li>Anything Pokemon</li>
-            <li>A motorized Lego set</li>
-            </ul>
-        You can get all this (and more) at an online toy
-        store. Two very popular ones are <a href="#">toysrus.com</a> and
-        <a href="#">eTOYS</a>.
-        <hr>
-        <p class="something">&copy; 2006 <a href="#">John Q. Wenmaster. All rights reserved.</p>
+          <li>Roller blades</li>
+          <li>Magic tricks</li>
+          <li>Anything Pokemon</li>
+          <li>A motorized Lego set</li>
+        </ul>
+      </article>
 
-</div>
-</body>
+      <article>
+        You can get all this (and more) at an online toy store. Two very popular
+        ones are <a href="">toysrus.com</a> and <a href="">eTOYS</a>.
+        <hr />
+      </article>
+
+      <article class="center">
+        <p>© 2006 <a href="">John Q. Wenmaster</a>. All rights reserved.</p>
+      </article>
+    </section>
+  </body>
 </html>
