--- a/index.html
+++ b/index.html
@@ -32,5 +32,10 @@
     <a href="./task_18_6/Task_4.html" target="_blank">task 4</a>
     <a href="./task_18_6/Task_5.html" target="_blank">task 5</a>
 
+    <h2>task 18-6</h2>
+
+    <a href="./task_18_6/Task_1.html" target="_blank">task 1</a>
+    <a href="./task_18_6/Task_2.html" target="_blank">task 2</a>
+    <a href="./task_18_6/Task_3.html" target="_blank">task 3</a>
 </body>
 </html>
