--- a/task_20_6/Task_2.html
+++ b/task_20_6/Task_2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style4.css">
+    <link rel="stylesheet" href="style1.css">
 
 </head>
 <body>
@@ -13,30 +13,65 @@
 
     
     <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint illum debitis illo modi vel deserunt molestiae! Placeat optio vero magnam voluptate tenetur a consequatur, dolore, sapiente dolores ad suscipit inventore.
-        Minus dolor mollitia, voluptatem ea repudiandae necessitatibus voluptates harum libero architecto sit nihil deserunt ut hic et commodi a voluptatibus quisquam laborum consectetur incidunt debitis neque laboriosam. Voluptatem, saepe facilis.
+       Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, eaque inventore? Recusandae dolores praesentium est dolorem eligendi nam quaerat maxime repellat autem velit, unde odio similique nobis corporis odit excepturi.
+       Quidem cum cupiditate commodi, veritatis a temporibus, officiis quam consequuntur, pariatur modi id. Vitae accusamus modi deleniti provident recusandae, itaque saepe delectus eum rem doloremque ducimus tempora porro voluptatibus? Nam!
+       Corrupti quis error dolore quaerat magni molestias, tempora minus quae nemo reiciendis soluta sint aperiam architecto earum unde aliquid numquam molestiae neque cupiditate dolorem ab alias veritatis dolor quisquam? Laudantium.
+       Iure magnam aspernatur odit tempora repellat, soluta aut libero minus quis deserunt nesciunt ipsum asperiores sunt nemo quam a alias. Perspiciatis animi ad voluptatem. Deserunt recusandae architecto corporis placeat corrupti!
+       Quia reprehenderit doloribus similique ab ducimus error, porro quidem aut possimus tenetur, a impedit libero mollitia dignissimos nostrum accusantium quasi sapiente tempora voluptates saepe numquam molestias velit molestiae consequuntur. Doloremque?
+       Nemo cupiditate excepturi debitis velit repellat, in placeat explicabo maxime, iure dolorem repudiandae quasi asperiores nostrum tenetur quod tempore est voluptatem quibusdam sapiente. Aperiam molestias minus magni nostrum nam eum.
+       Voluptatibus cumque quod dolor, nesciunt quo voluptas aliquam sed architecto, blanditiis ullam distinctio laudantium accusamus, iure ratione error temporibus asperiores ab consectetur repudiandae natus ipsam pariatur. Incidunt odio repellendus illum!
+       Quidem, dolore at aut sint, placeat, nihil esse excepturi reiciendis deleniti dolorem earum fugit iste? Distinctio quod perferendis labore, eveniet sunt tenetur quae vero magni reiciendis non, eos optio autem!
+       Aspernatur neque molestias beatae sapiente ducimus aut exercitationem voluptatibus recusandae atque dicta obcaecati voluptas totam ipsa assumenda officia accusamus, veritatis alias, nulla amet dolorum quidem commodi. Soluta sapiente sint a!
+       Modi explicabo obcaecati sint, pariatur dolorem tenetur et labore! Non sequi aliquam mollitia repudiandae, voluptatibus inventore earum odit provident amet eveniet voluptatem minus nulla sunt atque accusantium repellendus qui aut.
     </p>
 
     <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, quae rerum nihil recusandae, perferendis harum maiores officia inventore totam illum provident. Saepe, ab voluptatibus odio quod magni quam error dicta!
-        Soluta quod molestias reprehenderit. Itaque deleniti sequi voluptatum quod repudiandae iste exercitationem corporis voluptas consectetur, sunt impedit ipsa veritatis delectus? Sint corporis voluptatum ullam, neque magni culpa commodi itaque corrupti.
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum doloremque est accusamus explicabo iste necessitatibus similique consequuntur laboriosam sunt vel dolores eveniet rerum temporibus reprehenderit recusandae, omnis pariatur dicta quod!
+        Dolorem perferendis accusamus deleniti voluptas? Explicabo dolore eum sequi provident soluta beatae temporibus, quidem quas at quis, facere ad minima repellat nisi obcaecati debitis totam, architecto consectetur! Vero, nam distinctio?
+        Nostrum repellendus voluptatibus laboriosam dicta nobis ad quis, dignissimos atque suscipit sint, sed corporis id. Amet, ipsam autem? Laudantium labore quasi exercitationem illo repudiandae molestiae obcaecati, porro delectus eveniet quis!
+        Ducimus laboriosam ipsum sunt doloribus fugiat maxime neque alias sapiente velit? Soluta, mollitia cum sint error commodi, accusamus necessitatibus veniam quae iure distinctio dolor consectetur magni repellat adipisci minus quasi.
+        Reprehenderit distinctio hic unde laborum explicabo minus voluptatum velit quas sequi, iste, impedit, doloribus enim nemo numquam inventore quae quasi veritatis? Quaerat in animi nam nemo, amet dicta pariatur eveniet.
+        Expedita sequi perspiciatis autem aliquam, quia ut corrupti laudantium libero hic. Nam, nostrum eligendi. Perspiciatis repudiandae veritatis molestias eaque doloremque qui id ipsa fugiat, omnis doloribus nobis quasi voluptatem esse!
+        Eveniet provident veritatis fugiat aliquam illo quibusdam incidunt nisi eum iure odit accusamus quas architecto libero, itaque ratione eaque, eius necessitatibus fugit rerum iste expedita sequi animi? Autem, et rem.
+        Sint, eveniet est. Autem minus iste officia iure harum deleniti iusto dolorem cupiditate! Praesentium nostrum animi eos laudantium ullam delectus voluptates pariatur doloribus, ab necessitatibus debitis beatae dolore aut perspiciatis!
+        Doloremque explicabo consequuntur fuga rem? Iusto laboriosam magni corporis suscipit, illo sapiente, officiis unde incidunt soluta illum ducimus ut sint alias. Ducimus alias odio eligendi voluptatum maiores quae ratione aut.
+        Neque laboriosam accusantium dolore ex corrupti voluptatem perspiciatis, odit, sit sapiente quaerat provident nobis temporibus quibusdam quia consectetur ut. Molestiae incidunt eaque doloribus et? Rerum eum non doloribus dolorum recusandae!
     </p>
 
     <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed dolor, hic itaque quaerat doloremque modi harum neque ipsa corrupti officiis excepturi veritatis aliquam voluptatibus, explicabo vel? Quod tempore repellendus laboriosam?
-        Consequuntur nemo recusandae veritatis porro id, hic quam nobis provident quaerat temporibus est! At obcaecati, alias voluptas sapiente totam ducimus doloremque quae repudiandae doloribus minus ab non, fuga laudantium recusandae!
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur officiis eos nesciunt sed sit autem soluta possimus! Vel labore omnis neque? Molestias perspiciatis nulla quod beatae soluta! Nam, beatae dolorum.
+        Quam itaque quidem fuga illo libero. Dicta commodi reiciendis itaque nemo. Placeat repudiandae officia explicabo ipsum? Nostrum ab voluptate soluta. Incidunt consequuntur provident quasi nostrum ratione, dicta sed enim possimus!
+        Accusamus, soluta perferendis! Culpa odio delectus cupiditate, necessitatibus itaque aspernatur veniam, obcaecati exercitationem illum labore adipisci odit pariatur? Deleniti facere sint doloribus iste aliquid incidunt nulla debitis laudantium aliquam deserunt!
+        Dolor, eius quisquam optio deserunt ratione cum nostrum recusandae quibusdam quam quo. Adipisci nam quaerat harum alias in fugit laboriosam dicta iure, ad assumenda, dolore nihil esse maiores consectetur iste?
+        Repellendus, enim reprehenderit dolore quae expedita, aliquid voluptatibus excepturi nesciunt aspernatur saepe repellat dolor! Maxime, consectetur animi. Quos voluptates sint illum soluta corporis omnis nesciunt, quas temporibus facilis minima quia?
+        Iste eligendi minus quod dolores magni officia recusandae delectus, voluptatibus odit cumque nostrum harum nisi, hic aspernatur labore, unde illum dignissimos eos obcaecati voluptates soluta sint vitae eum? Rem, porro?
+        Laudantium voluptates recusandae, dignissimos labore nostrum suscipit asperiores sed eligendi nobis perferendis at, voluptatem, molestiae aliquid. Cum quidem aspernatur distinctio neque sunt atque quisquam deleniti, natus, dolores debitis enim quaerat?
+        Id temporibus earum quos at, dolores doloremque quasi consequuntur iusto recusandae ipsam consequatur blanditiis, ad ab autem amet magnam! Quaerat fugit, harum nisi dolorem temporibus reiciendis aliquid illum facilis enim?
+        At, porro nihil sint esse nam reiciendis reprehenderit dicta mollitia doloremque quam magni provident ad quas, veniam aliquid soluta iste atque repudiandae fugiat autem magnam eveniet enim illum. Recusandae, perferendis!
+        Distinctio dolores, vero natus est id voluptates consequuntur consectetur porro accusamus tempore blanditiis minima omnis. Unde pariatur illo distinctio praesentium iure ullam error aut, officiis nihil soluta eveniet dolore repellat.
     </p>
 
     <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, nobis ea. At officia accusantium eos quasi expedita iure est? Maxime porro doloremque harum aliquam nisi quo modi odio atque perferendis.
-    </p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo sequi, assumenda quibusdam ipsa cupiditate modi voluptatum obcaecati. In assumenda laborum cum, possimus ut eligendi ad sunt, adipisci impedit consequatur obcaecati.
+        Expedita velit, inventore explicabo nemo a reiciendis, illo earum optio quasi autem quis. Accusamus voluptas voluptates maxime eveniet ipsam enim fugiat modi iure maiores beatae voluptate aliquam, velit tenetur. Distinctio.
+        Voluptatum quo non beatae quidem. Neque omnis vitae reiciendis possimus, tempora consectetur quaerat. Voluptates quod eius debitis in quos explicabo, facere nobis vitae veritatis sapiente minima optio vero quam quis!
+        Commodi dolorem incidunt tempora excepturi cum perspiciatis similique soluta, quae iusto, recusandae assumenda possimus, labore eius in aliquid quis. Eligendi voluptatibus vero magnam, autem maiores saepe officiis quas repellendus odio.
+        Nihil veritatis dolorem natus fugiat odit ab cumque hic magnam velit? Enim quis distinctio harum accusamus nam dolor repudiandae exercitationem ea sit? Molestias ut assumenda sed magni quidem natus a!
+        Consectetur possimus aperiam optio, rerum assumenda suscipit magnam harum sint est, aspernatur magni, mollitia ipsa recusandae quasi? Impedit quam, natus vel qui veritatis recusandae aut tempora, ullam, autem magnam voluptatibus.
+        </p>
 
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur repudiandae, debitis velit eos doloremque exercitationem aliquam quibusdam ducimus consequatur veritatis maxime nostrum.
+    <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus quia, culpa quas repellat, labore earum dolores eveniet id libero amet magni ducimus explicabo nostrum pariatur error accusamus? Accusamus, aliquid aut!
+        Nisi nulla ut obcaecati? Harum quae soluta, dolore fugit maxime, laborum beatae aperiam, numquam iure ex perferendis quam eius incidunt labore impedit ullam? Corrupti, labore distinctio mollitia possimus molestiae obcaecati!
+        Expedita rem enim harum, impedit perspiciatis voluptatum possimus aliquam optio placeat reprehenderit pariatur consectetur nesciunt incidunt voluptatibus autem maiores totam quisquam sunt ea quia ratione voluptatem perferendis molestias. Maxime, ratione!
+        Sapiente vitae fuga eum, voluptates, nemo praesentium, corporis et esse quidem quibusdam quas odio delectus nisi! Repellendus doloremque voluptate aut temporibus cumque consectetur minima, esse sint quos. Odit, dolorum iusto!
+        Suscipit facere libero fuga fugit quaerat unde placeat temporibus voluptates non repellat enim quisquam sint natus soluta quos consectetur voluptas, similique vitae sed eveniet voluptatem ratione accusamus. Quae, officia in!
+        Neque aut nam atque cumque. Fuga aperiam aspernatur ipsam ex sed, incidunt ipsum animi magni, vitae deserunt possimus unde iste esse natus, porro omnis reprehenderit error eum suscipit iusto vel.
     </p>
 
     <p>Lorem ipsum dolor <span class="tip">sit amet consectetur, </span>  adipisicing elit. Minima repudiandae aspernatur, corrupti perspiciatis officia voluptatum voluptates.
     </p>
 </div>
-<img src="../Resources/TopHat.png" alt="tophat">
+<div class="img"> </div>
 </body>
 </html>
