--- a/task_21_6/Task_2.html
+++ b/task_21_6/Task_2.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task 2</title>
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="style1.css">
 </head>
 <body>
     <div class="container2">
-        <div class="item21">1</div>
-        <div class="item22">2</div>
+        <div class="item21">First Part</div>
+        <div class="item22">Second Part</div>
     </div>
 </body>
 </html>
