--- a/task_25_6/Task_1.html
+++ b/task_25_6/Task_1.html
@@ -25,13 +25,13 @@
          <p><b>Let's look at some random pictures!</b> from http://lorempixel.com</p>
          <div class="row">
             <div class="row">
-                <div class="col-sm mx-auto">
+                <div class="col-sm mx-3">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id, culpa ad fuga sint commodi aliquid quod ducimus iste cum nobis magnam, ut in nostrum dignissimos optio voluptatibus reprehenderit cupiditate autem.
                 </div>
-                <div class="col-sm">
+                <div class="col-sm mx-3">
                   Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi numquam expedita dolor illo fugit? Eos corrupti perspiciatis vel cupiditate pariatur explicabo placeat repellat odio unde tempora, tenetur eligendi aperiam laboriosam?
                 </div>
-                <div class="col-sm">
+                <div class="col-sm mx-3">
                   Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate vero assumenda provident corrupti facere beatae quae, adipisci nobis quasi quia repudiandae ipsa sequi, hic suscipit! Aperiam pariatur soluta architecto!
                 </div>
             </div>
